Aligning footer correctly

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,9 @@ footer {
   text-align: right;
   color: #fff;
   padding: 22px 0;
+  padding-right: 50px;
   overflow: hidden;
   bottom: 0;
+  width: 97%;
+  position: fixed;
 }
